# project-c

./: CMakeLists.txt  README.md
main/: main.c
test/: test.cc
